cluster/core/networking/linkerd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viz
  namespace: linkerd-viz
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.security.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "viz.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN//./-}-tls"
  rules:
    - host: "viz.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
